public interface IObject
{
    void Disable();
    void Enable();
    int GetFamilyId();
    int GetId();
}