public interface IType
{
    
}