public interface IWeapon : ICollectable
{
    void FirstAttack();
    void SecondAttack();
}