public interface IInteractor
{
    void OnEnterInteractable(IInteractable interactable);
    void OnLeaveInteractable(IInteractable interactable);
}