public enum InteractableType {}