using System;

public class TextManager
{
    string FilePath;
    string Language;

    public TextChunk? Retrieve(string key)
    {
        throw new NotImplementedException();
    }
}